Fix slider flickering

--- a/src/blocks/components/products/_products.scss
+++ b/src/blocks/components/products/_products.scss
@@ -1,6 +1,8 @@
 @import 'node_modules/slick-carousel/slick/slick.scss';
 
 .products {
+  opacity: 0;
+
   &__title {
     margin: 0 24px 12px 0;
     font-size: 22px;
